--- a/html/index.html
+++ b/html/index.html
@@ -154,7 +154,7 @@ angular.module('stats', ["chart.js"])
                         </p>
                 </div>
                 <div class="col-md-4 col-xs-12">
-                        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-colors="colors">
+                        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" chart-colors="country_stats_colors">
                         </canvas> 
                 </div>
                 <div class="col-md-8 col-xs-12">
