Add Country Names

--- a/html/newindex.html
+++ b/html/newindex.html
@@ -17,6 +17,7 @@
 <script type="text/javascript" src="apiurl.js"></script>
 
 <script type="text/javascript" src="sample.js"></script>
+<script type="text/javascript" src="countries.js"></script>
 
 <style type="text/css">
 
