--- a/html/overview.html
+++ b/html/overview.html
@@ -66,9 +66,9 @@
 		</table>
 	</div>
 	<div class="col-md-3">
-		<canvas id="doughnut" class="chart chart-doughnut" chart-data="country_stats_values" chart-labels="country_stats_labels">
+		<canvas id="doughnut" class="chart chart-doughnut" chart-data="country_stats_values" chart-labels="country_stats_labels" chart-click="clickchart_countries">
 		</canvas>
 		<br>
-		<center>All Connections by Country</center>
+		<center><small><b>All Connections by Country</b><br>Click on country to see all connections</small></center>
 	</div>
 </div>
