--- a/html/overview.html
+++ b/html/overview.html
@@ -39,7 +39,7 @@
 </table>
 
 
-<h2>Latest Connections</h2>
+<h2>Latest Connections <small><a href="#/connections">more</a></small></h2>
 
 <div class="row">
 	<div class="col-md-9">
