--- a/html/connectionlist.html
+++ b/html/connectionlist.html
@@ -1,29 +1,42 @@
-<h2>Latest Connections</h2>
+<h2>Connections</h2>
 
-<p>
-	<span>Showing only Connections</span>
-	<span ng-show="field == 'ip'">from {{ ip }}</span>
-	<span ng-show="field == 'country'">from <img src="img/flags/{{ country.toLowerCase() }}.png">  {{ countryname }}</span>
-	<span ng-show="older_than != null">, older than {{ older_than }}</span>
-</p>
+<div class="well well-sm" style="font-family: monospace">
+	<div style="font-size: 0.7em;">
+		Filters:
+		<button style="background:none; border:none; margin:0; padding:0;" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+			<span class="glyphicon glyphicon-info-sign"></span>
+		</button>
+		<div class="collapse" id="collapseExample">
+			<p>You may use the url bar to edit filters</p>
+			<p>Available arguments: ["ipblock", "user", "password", "ip", "country", "asn"]</p>
+		</div>
+	</div>
+	<span ng-repeat="(k, v) in filter">{{ k }} == <img ng-show="k == 'country'" src="img/flags/{{ v.toLowerCase() }}.png"> {{ v }} {{ k == 'country' ? '(' + COUNTRY_LIST[v] + ')' : '' }} {{ $last ? '' : ', ' }}</span>
+</div>
 
 <table class="table table-condensed">
 
 	<tr>
 		<th>Date</th>
-		<th ng-show="field != 'ip'">IP</th>
-		<th ng-show="field != 'country'">Country</th>
+		<th ng-show="!filter['ip']">IP</th>
+		<th ng-show="!filter['asn']">ASN</th>
+		<th ng-show="!filter['country']">Country</th>
 		<th>Username</th>
 		<th>Password</th>
 		<th>N⁰ Urls</th>
 	</tr>
 	<tr ng-repeat="connection in connections">
 		<td><a href="{{ '#/connection/' + connection.id }}">{{ formatDate(connection.date) }}</a></td>
-		<td ng-show="field != 'ip'"><a href="#/connection/by/ip/{{ connection.ip }}">{{ connection.ip }}</a></td>
-		<td ng-show="field != 'country'"><img src="img/flags/{{ connection.country.toLowerCase() }}.png">  {{ connection.country }}</td>
-		<td>{{ connection.user }}</a></td>
-		<td>{{ connection.pass }}</td>
+		<td ng-show="!filter['ip']"> {{ connection.ip }} <a href="#/connections?ip={{ connection.ip }}"><span class="glyphicon glyphicon-screenshot"></a></td>
+		<td ng-show="!filter['asn']">{{ connection.asn }} <a href="#/connections?asn={{ connection.asn }}"><span class="glyphicon glyphicon-screenshot"></a></td>
+		<td ng-show="!filter['country']"><img src="img/flags/{{ connection.country.toLowerCase() }}.png">  {{ connection.country }} <a href="#/connections?country={{ connection.country }}"><span class="glyphicon glyphicon-screenshot"></span></a></td>
+		<td>{{ connection.user }} <a href="#/connections?user={{ connection.user }}"><span class="glyphicon glyphicon-screenshot"></span></a></td>
+		<td>{{ connection.password }} <a href="#/connections?password={{ connection.password }}"><span class="glyphicon glyphicon-screenshot"></span></td>
 		<td>{{ connection.urls.length }}</td>
 	</tr>
 
 </table>
+
+<div class="pull-right">
+	<button type="button" class="btn btn-default" ng-click="nextpage()">More &raquo;</button>
+</div>
