forgot to change pass to password in overview

--- a/html/overview.html
+++ b/html/overview.html
@@ -59,7 +59,7 @@
 				<td><img src="img/flags/{{ connection.country.toLowerCase() }}.png">  {{ connection.country }}</td>
 				<!-- <td>{{ connection.ip }}</td> -->
 				<td>{{ connection.user }}</a></td>
-				<td>{{ connection.pass }}</td>
+				<td>{{ connection.password }}</td>
 				<td>{{ connection.urls.length }}</td>
 			</tr>
 
