--- a/html/url.html
+++ b/html/url.html
@@ -4,7 +4,15 @@
 
 	<tr><td>URL</td><td>{{ url.url }}</td></tr>
 	<tr><td>First seen</td><td>{{ formatDate(url.date) }}</td></tr>
-	<tr><td>Resolves to</td><td><img src="img/flags/{{ url.country.toLowerCase() }}.png"> {{ url.countryname }} - {{ url.ip }} - <a href="http://bgp.he.net/AS{{ url.asn }}" target="_blank">AS{{ url.asn }}</a></td></tr>
+	<tr><td>Resolves to</td>
+		<td>
+			<span ng-show="url.country"><img src="img/flags/{{ url.country.toLowerCase() }}.png"> {{ url.countryname }} <a href="#/connections?country={{ url.country }}"><span class="glyphicon glyphicon-screenshot"></span></a></span><br>
+			<span>{{ url.ip }} </span><br>
+			<span ng-show="url.asn">AS{{ url.asn.asn }} <b>{{ url.asn.name }}</b>
+				<a href="#/asn/{{ url.asn.asn }}"><span class="glyphicon glyphicon-screenshot"></span></a>
+			</span><br>
+		</td>
+	</tr>
 
 </table>
 
