--- a/html/index.html
+++ b/html/index.html
@@ -51,7 +51,8 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#/">Telnet-Iot-Honeypot</a>
+      
+      <a class="navbar-brand" href="#/" style="padding: 0"><img src="img/icon.svg" style="height: 2em; margin: 10px; display: float; float: left;"><span style="margin: 15px 15px 15px 0px; display: float; float: left;">Telnet-Iot-Honeypot</span></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -63,12 +64,14 @@
         <li><a href="#/connections">Connections</a></li>
       </ul>
       
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="https://github.com/Phype/telnet-iot-honeypot" target="_blank">view on github</a></li>
-      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+<!-- Github fork button, actually placed o top right -->
+<a href="https://github.com/Phype/telnet-iot-honeypot" target="_blank" class="hidden-xs">
+	<img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png">
+</a>
 
 <div class="container">
 	<div ng-view></div>
