Add support for Tags

--- a/html/connection.html
+++ b/html/connection.html
@@ -26,6 +26,13 @@
 			</p>
 		</td>
 	</tr>
+    <tr ng-show="connection.tags.length > 0">
+		<td>Tags</td>
+		<td>
+            <a class="btn btn-default btn-xs" ng-repeat="tag in connection.tags" style="margin-right: 1em;" href="#/tag/{{ tag.name }}">{{ tag.name }}</a>
+		</td>
+	</tr>
+    
 
 </table>
 
