--- a/html/index.html
+++ b/html/index.html
@@ -62,6 +62,7 @@
         <li><a href="#/urls">Urls</a></li>
         <li><a href="#/samples">Samples</a></li>
         <li><a href="#/connections">Connections</a></li>
+        <li><a href="#/tags">Tags</a></li>
       </ul>
       
     </div><!-- /.navbar-collapse -->
