--- a/html/fancy/graph/index.html
+++ b/html/fancy/graph/index.html
@@ -107,16 +107,21 @@ function gotConn(conn)
   for (var u = 0; u < conn.urls.length; u++)
   {
     var url    = conn.urls[u];
-    var url_ip = getIP(url.ip, "url");
+    if (url.ip != null && url.ip != "")
+    {
+      var url_ip = getIP(url.ip, "url");
 
-    // Conn <-> URL
-    ip.neighbors[url_ip.ip] = url_ip;
-    url_ip.neighbors[ip.ip] = ip;
+      // Conn <-> URL
+      ip.neighbors[url_ip.ip] = url_ip;
+      url_ip.neighbors[ip.ip] = ip;
 
-    // URL <-> Sample
-    var sample_ip = getIP(url.sample, "sample");
-    url_ip.neighbors[sample_ip.ip] = sample_ip;
-    sample_ip.neighbors[url_ip.ip] = url_ip;
+      // URL <-> Sample
+      if (url.sample != null) {
+        var sample_ip = getIP(url.sample, "sample");
+        url_ip.neighbors[sample_ip.ip] = sample_ip;
+        sample_ip.neighbors[url_ip.ip] = url_ip;
+      }
+    }
   }
 }
 
@@ -137,7 +142,7 @@ function main()
     var max_id = myconns[1].id;
     print(max_id);
 
-    for (var i = 0; i <= max_id; i++)
+    for (var i = 0; i <= 1113; i++)
     {
       getConn(i);
     }
