--- a/html/samples.html
+++ b/html/samples.html
@@ -14,7 +14,7 @@
 		<td><a href="{{ '#/sample/' + sample.sha256 }}">{{ sample.name }}</a></td>
 		<td>{{ sample.length }}</a></td>
 		<td>{{ formatDate(sample.date) }}</td>
-		<td class="hidden-xs">{{ sample.urls.length }}</td>
+		<td class="hidden-xs">{{ sample.urls }}</td>
 	</tr>
 
 </table>
