Add basic admin menu

--- a/html/index.html
+++ b/html/index.html
@@ -63,6 +63,7 @@
         <li><a href="#/samples">Samples</a></li>
         <li><a href="#/connections">Connections</a></li>
         <li><a href="#/tags">Tags</a></li>
+        <li><a href="#/admin">Admin</a></li>
       </ul>
       
     </div><!-- /.navbar-collapse -->
