Add chart.js animation on mobile devices

--- a/html/overview.html
+++ b/html/overview.html
@@ -80,7 +80,9 @@
 	<div class="col-sm-3 col-xs-1 hidden-md hidden-lg"><!-- spacer --></div>
 
 	<div class="col-md-3 col-sm-6 col-xs-10">
-		<canvas id="doughnut" class="chart chart-doughnut" chart-data="country_stats_values" chart-labels="country_stats_labels" chart-click="clickchart_countries">
+		<canvas id="doughnut" class="chart chart-doughnut"
+			chart-data="country_stats_values" chart-labels="country_stats_labels"
+			chart-click="clickchart_countries" chart-options="chart_options">
 		</canvas>
 		<br>
 		<center><small><b>All Connections by Country</b><br>Click on country to see all connections</small></center>
