--- a/html/index.html
+++ b/html/index.html
@@ -31,7 +31,22 @@
 	font-family: monospace;
 }
 
+.code-line {
+	white-space: pre;
+}
+
+.code-line:hover {
+	white-space: pre;
+	background-color: #ddd;
+}
+
+
+.code-line.isinput:hover {
+	background-color: #fcc  ;
+}
+
 .code-line.isinput {
+    color: #a00;
 	font-weight: bold;
 }
 
