Graph and time network view

--- a/html/connection.html
+++ b/html/connection.html
@@ -4,6 +4,7 @@
 
 	<tr><td>Date</td><td>{{ formatDate(connection.date) }}</td></tr>
 	<tr><td>Duration</td><td>{{ connection.duration }} seconds</td></tr>
+	<tr><td>Network</td><td>{{ connection.network_id }}</td></tr>
 	<!-- <tr><td>ID</td><td>{{ connection.id }}</td></tr> -->
 	<!-- <tr><td>Honeypot name</td><td>{{ connection.backend_user }}</td></tr> -->
 	<tr>
