--- a/html/index.html
+++ b/html/index.html
@@ -11,13 +11,16 @@
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="http://visjs.org/dist/vis-network.min.css">
 
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.bundle.min.js"></script>
+<script src="http://visjs.org/dist/vis.js"></script>
 
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
 
 <script type="text/javascript" src="https://cdn.jsdelivr.net/angular.chartjs/latest/angular-chart.min.js"></script>
+<script type="text/javascript" src="js/angular-vis.js"></script>
 
 <script type="text/javascript" src="common.js"></script>
 <script type="text/javascript" src="apiurl.js"></script>
@@ -74,6 +77,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     
       <ul class="nav navbar-nav">
+        <li><a href="#/networks">Networks</a></li>
         <li><a href="#/urls">Urls</a></li>
         <li><a href="#/samples">Samples</a></li>
         <li><a href="#/connections">Connections</a></li>
