--- a/html/networks.html
+++ b/html/networks.html
@@ -9,7 +9,7 @@
 		<th>No Samples</th>
 	</tr>
 	<tr ng-repeat="network in networks | filter:filterNoSamples | orderBy:'-order'">
-		<td>{{ network.id }}</td>
+		<td><a href="#/network/{{ network.id }}">{{ network.id }}</a></td>
 		<td>{{ network.connections.length }}</td>
 		<td>{{ network.urls.length }}</td>
 		<td>{{ network.samples.length }}</td>
